--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build:alex": "alex src/",
     "build:eleventy:dev": "cross-env NODE_ENV=development eleventy",
     "build:eleventy:prod": "cross-env NODE_ENV=production eleventy",
-    "build:css:dev": "node-sass src/_sass/main.scss > public/css/main.css",
-    "build:css:prod": "node-sass src/_sass/main.scss -x --output-style compressed | postcss -u autoprefixer -b 'last 2 versions' -u cssnano --no-map > public/css/main.css",
+    "build:css:dev": "sass src/_sass/main.scss > public/css/main.css",
+    "build:css:prod": "sass src/_sass/main.scss -x --output-style compressed | postcss -u autoprefixer -b 'last 2 versions' -u cssnano --no-map > public/css/main.css",
     "prebuild:dev": "npm run clean && npm run mkdirs",
     "build:dev": "npm run build:css:dev && npm run build:eleventy:dev",
     "prebuild:prod": "npm run clean && npm run mkdirs",
@@ -33,22 +33,21 @@
     "url": "https://github.com/martinjc/introduction-to-html-css-js/issues"
   },
   "homepage": "https://github.com/martinjc/introduction-to-html-css-js#readme",
-  "dependencies": {},
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1",
+    "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
-    "alex": "^9.0.1",
+    "alex": "^10.0.0",
     "autoprefixer": "^10.0.1",
     "browser-sync": "^2.26.13",
     "cross-env": "^7.0.2",
-    "cssnano": "^4.1.10",
+    "cssnano": "^5.0.13",
     "markdown-it-emoji": "^2.0.0",
     "markdown-it-footnote": "^3.0.2",
-    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
     "postcss": "^8.1.4",
     "postcss-cli": "^8.1.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "sass": "^1.45.0"
   }
 }
