--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "introduction-to-html-css-js",
+  "name": "online-course-notes-11ty",
   "version": "1.0.0",
-  "description": "A short introduction to combining HTML, CSS and JS together",
+  "description": "a skeleton project using 11ty to generate course notes",
   "main": "index.js",
   "scripts": {
     "reinstall": "rimraf node_modules && npm cache clean && npm install",
@@ -12,35 +12,37 @@
     "build:eleventy:dev": "cross-env NODE_ENV=development eleventy",
     "build:eleventy:prod": "cross-env NODE_ENV=production eleventy",
     "build:css:dev": "sass src/_sass/main.scss > public/css/main.css",
-    "build:css:prod": "sass src/_sass/main.scss -x --output-style compressed | postcss -u autoprefixer -b 'last 2 versions' -u cssnano --no-map > public/css/main.css",
+    "build:css:prod": "sass src/_sass/main.scss | postcss -u autoprefixer -b 'last 2 versions' -u cssnano --no-map > public/css/main.css",
     "prebuild:dev": "npm run clean && npm run mkdirs",
     "build:dev": "npm run build:css:dev && npm run build:eleventy:dev",
     "prebuild:prod": "npm run clean && npm run mkdirs",
     "build:prod": "npm run build:css:prod && npm run build:eleventy:prod",
     "preserve": "npm run build:dev",
-    "serve": "browser-sync start -s --files 'public/**/*.(js|css|html)' --ss 'public' --port 8080 --reload-debounce 500  --no-open",
+    "serve": "browser-sync start -s --files 'public/**/*.(js|css|html)' --ss 'public' --port 8080  --no-open",
     "watch": "npm-run-all --parallel watch:*",
     "watch:eleventy": "onchange --await-write-finish 4000 'src/**/*.njk' 'src/**/*.md' 'src/**/*.json'  -- npm run build:eleventy:dev",
     "watch:css": "onchange --await-write-finish 4000 'src/_sass/**/*.scss' -- npm run build:css:dev && npm run build:eleventy:dev"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/martinjc/introduction-to-html-css-js.git"
+    "url": "git+https://github.com/martinjc/online-course-notes-11ty.git"
   },
   "author": "Martin Chorley",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/martinjc/introduction-to-html-css-js/issues"
+    "url": "https://github.com/martinjc/online-course-notes-11ty/issues"
   },
-  "homepage": "https://github.com/martinjc/introduction-to-html-css-js#readme",
+  "homepage": "https://github.com/martinjc/online-course-notes-11ty#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy-img": "^2.0.1",
+    "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
-    "alex": "^10.0.0",
+    "alex": "^11.0.0",
     "autoprefixer": "^10.0.1",
     "browser-sync": "^2.26.13",
     "cross-env": "^7.0.2",
-    "cssnano": "^5.0.13",
+    "cssnano": "^5.1.14",
     "markdown-it-emoji": "^2.0.0",
     "markdown-it-footnote": "^3.0.2",
     "npm-run-all": "^4.1.5",
@@ -48,6 +50,6 @@
     "postcss": "^8.1.4",
     "postcss-cli": "^8.1.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.45.0"
+    "sass": "^1.56.1"
   }
 }
